--- a/stow/dot-local/bin/startsam.rc
+++ b/stow/dot-local/bin/startsam.rc
@@ -1,6 +1,6 @@
 #!/usr/bin/env rc
 
-# ~/.local/bin/startsam.rc - launcher for sam
+# ~/local/bin/startsam.rc - launcher for sam
 #
 # To set font (run '9p ls font' to see available non-9p fonts) instead of using
 # the default, set the font variable
