--- a/stow/dot-local/bin/startacme.rc
+++ b/stow/dot-local/bin/startacme.rc
@@ -70,7 +70,7 @@ fn getprocs {
 }
 
 # Run only a single instance of plumber
-9p stat plumb >[2]/dev/null >[1=2] || plumber
+9p stat plumb >[2]/dev/null >[1=2] || plumber -p $HOME/local/lib/plumbing
 
 # Run only a single instance of fontsrv
 9p stat font >[2]/dev/null >[1=2] || fontsrv &
